tests/baselines/reference/moduleWithValuesAsType.errors.txt
==== tests/cases/compiler/moduleWithValuesAsType.ts (1 errors) ====
    module A {
        var b = 1;
    }
    
    var a: A; // no error
           ~
!!! error TS2304: Cannot find name 'A'.